# sem

./: .gitignore  Makefile  README.md
backend/: .env.example  pyproject.toml  railway.toml  sem.db
backend/app/: config.py  database.py  main.py
backend/app/models/: event.py
backend/app/routers/: events.py
backend/app/schemas/: event.py
frontend/: package-lock.json  package.json  railway.toml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: EventCard.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CreateEvent.tsx  Events.tsx  Home.tsx
frontend/src/styles/: index.css  variables.scss
infrastructure/: railway.toml
